fixed mobile view to wrap nav

--- a/components/partials/header/header.module.scss
+++ b/components/partials/header/header.module.scss
@@ -31,6 +31,7 @@
 
 	ul {
 		display: flex;
+		flex-wrap: wrap;
 	}
 
 	li {
